--- a/.github/workflows/Unity-Build.yml
+++ b/.github/workflows/Unity-Build.yml
@@ -40,15 +40,12 @@ jobs:
           buildName: ${{ github.event.repository.name }}
       # Step4 - Upload Build File Artifact
       - name: Upload Build File Artifact
+        id: artifact
         uses: actions/upload-artifact@v4
         with:
           name: Build-Windows
           path: build
-      # Step5 - Compress Build Result
-      - name: Zip build artifact
-        run: |
-          zip -r ${{ steps.build.outputs.buildPath }}/${{ github.event.repository.name }}.zip ${{ steps.build.outputs.buildPath }}/*
-      # Step6 - Create Github Release
+      # Step5 - Create Github Release
       - name: Create a GitHub release
         id: create_release
         uses: actions/create-release@v1
@@ -61,14 +58,14 @@ jobs:
             Automated release for version ${{ github.ref }}.
           draft: false
           prerelease: false
-      # Step7 - Upload Build file to Release
+      # Step6 - Upload Build file to Release
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./${{ steps.build.outputs.buildPath }}/${{ github.event.repository.name }}.zip
+          asset_path: ${{ steps.artifact.outputs.artifact-url }}
           asset_name: ${{ github.event.repository.name }}-${{ github.ref }}-Windows64.zip
           asset_content_type: application/zip
 
