--- a/.github/workflows/Unity-Build.yml
+++ b/.github/workflows/Unity-Build.yml
@@ -7,7 +7,6 @@ on:
     branches: [ "main" ]
 
 jobs:
-  #Job 설정
   buildForWindow: 
     name: Build - Windows x64
     runs-on: ubuntu-latest
@@ -45,13 +44,24 @@ jobs:
         with:
           name: Build-Windows
           path: build
-      # Step5 - Bump version and push tag
+  releasesBuild:
+    name: Automated Releases
+    runs-on: ubuntu-latest
+    needs: buildForWindow
+    steps:
+      # Step1 - Download Build Artifacts
+      - name: Download Build File Artifacts
+        id: artifact
+        uses: actions/download-artifact@v5
+        with:
+          name: Build-Windows
+      # Step2 - Bump version and push tag
       - name: Bump version and push tag
         id: tag_version
         uses: mathieudutour/github-tag-action@v6.2
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-      # Step6 - Create Github Release
+      # Step3 - Create Github Release
       - name: Create a GitHub release
         id: create_release
         uses: actions/create-release@v1
@@ -66,15 +76,16 @@ jobs:
             Automated release created by Github Actions.
           draft: false
           prerelease: false
-      # Step7 - Upload Build file to Release
+      # Step4 - Upload Build file to Release
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ${{ steps.artifact.outputs.artifact-url }}
+          asset_path: ${{ steps.artifact.outputs.download-path }}
           asset_name: ${{ github.event.repository.name }}-${{ github.ref }}-Windows64.zip
           asset_content_type: application/zip
+
 
 #  참고: https://dev-junwoo.tistory.com/149 [개발초보 JW의 성장일기:티스토리]
