--- a/.github/workflows/Unity-Build.yml
+++ b/.github/workflows/Unity-Build.yml
@@ -10,6 +10,8 @@ jobs:
   buildForWindow: 
     name: Build - Windows x64
     runs-on: ubuntu-latest
+    outputs:
+      artifacts: ${{ steps.artifact.outputs.artifact-id }}
     steps:
       # Step1 - Check Out
       - name: Check Out
@@ -48,13 +50,15 @@ jobs:
     name: Automated Releases
     runs-on: ubuntu-latest
     needs: buildForWindow
+    env:
+      ARTIFACTS: ${{ needs.buildForWindow.outputs.artifacts }}
     steps:
       # Step1 - Download Build Artifacts
       - name: Download Build File Artifacts
         id: artifact
         uses: actions/download-artifact@v5
         with:
-          name: Build-Windows
+          artifacts-ids: ${{ env.ARTIFACTS }}
       # Step2 - Bump version and push tag
       - name: Bump version and push tag
         id: tag_version
