--- a/.github/workflows/Unity-Build.yml
+++ b/.github/workflows/Unity-Build.yml
@@ -65,31 +65,16 @@ jobs:
         uses: mathieudutour/github-tag-action@v6.2
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-      # Step3 - Create Github Release
-      - name: Create a GitHub release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # Step3 - Release!
+      - name: Release
+        uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ steps.tag_version.outputs.new_tag }}
-          release_name: Automatically Generated Release ${{ steps.tag_version.outputs.new_tag }}
+          name: Automatically Generated Release ${{ steps.tag_version.outputs.new_tag }}
           body:  |
             ${{ steps.tag_version.outputs.changelog }}
 
             Automated release created by Github Actions.
           draft: false
           prerelease: false
-      # Step4 - Upload Build file to Release
-      - name: Upload Release Asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ${{ steps.artifact.outputs.download-path }}
-          asset_name: ${{ github.event.repository.name }}-${{ github.ref }}-Windows64.zip
-          asset_content_type: application/zip
-
-
-#  참고: https://dev-junwoo.tistory.com/149 [개발초보 JW의 성장일기:티스토리]
+          files: ${{ steps.artifact.outputs.download-path }}
