--- a/.github/workflows/Unity-Build.yml
+++ b/.github/workflows/Unity-Build.yml
@@ -65,8 +65,9 @@ jobs:
         uses: mathieudutour/github-tag-action@v6.2
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-      # Step3 - Release!
-      - name: Release
+      # Step3 - Create Release
+      - name: Create Release
+        id: create_release
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ steps.tag_version.outputs.new_tag }}
@@ -79,3 +80,13 @@ jobs:
           prerelease: false
           files:  |
             ${{ steps.artifact.outputs.download-path }}/Build-Windows.zip
+      # Step4 - Upload Build file to Release
+      - name: Upload Release Asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ${{ steps.artifact.outputs.download-path }}.Build-Windows.zip
+          asset_name: ${{ github.event.repository.name }}-${{ github.ref }}-Windows64.zip
+          asset_content_type: application/zip
