--- a/.github/workflows/Unity-Build.yml
+++ b/.github/workflows/Unity-Build.yml
@@ -63,13 +63,16 @@ jobs:
       # Step2 - Check File Structure
       - name: Display structure of downloaded files
         run: ls -R artifacts/
-      # Step3 - Bump version and push tag
+      # Step3 - Create ZIP file
+      - name: Create ZIP file
+        run: zip -r Build-Windows.zip artifacts/
+      # Step4 - Bump version and push tag
       - name: Bump version and push tag
         id: tag_version
         uses: mathieudutour/github-tag-action@v6.2
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-      # Step4 - Create Release
+      # Step5 - Create Release
       - name: Create Release
         id: create_release
         uses: softprops/action-gh-release@v2
@@ -82,13 +85,14 @@ jobs:
             Automated release created by Github Actions.
           draft: false
           prerelease: false
-      # Step5 - Upload Build file to Release
-      - name: Upload Release Asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: artifacts/Build-Windows.zip
-          asset_name: ${{ github.event.repository.name }}-${{ github.ref }}-Windows64.zip
-          asset_content_type: application/zip
+          files: "Build-Windows.zip"
+      # Step6 - Upload Build file to Release
+      # - name: Upload Release Asset
+      #   uses: actions/upload-release-asset@v1
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   with:
+      #     upload_url: ${{ steps.create_release.outputs.upload_url }}
+      #     asset_path: artifacts/Build-Windows.zip
+      #     asset_name: ${{ github.event.repository.name }}-${{ github.ref }}-Windows64.zip
+      #     asset_content_type: application/zip
