--- a/.github/workflows/Unity-Build.yml
+++ b/.github/workflows/Unity-Build.yml
@@ -65,7 +65,7 @@ jobs:
         run: ls -R artifacts/
       # Step3 - Create ZIP file
       - name: Create ZIP file
-        run: zip -r Build-Windows.zip artifacts/
+        run: zip -r Build-Windows.zip artifacts/StandaloneWindows64/
       # Step4 - Bump version and push tag
       - name: Bump version and push tag
         id: tag_version
@@ -86,13 +86,3 @@ jobs:
           draft: false
           prerelease: false
           files: "Build-Windows.zip"
-      # Step6 - Upload Build file to Release
-      # - name: Upload Release Asset
-      #   uses: actions/upload-release-asset@v1
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   with:
-      #     upload_url: ${{ steps.create_release.outputs.upload_url }}
-      #     asset_path: artifacts/Build-Windows.zip
-      #     asset_name: ${{ github.event.repository.name }}-${{ github.ref }}-Windows64.zip
-      #     asset_content_type: application/zip
